# nova-quant

./: .env.example  .gitattributes  .gitignore  .npmignore  .prettierignore  .prettierrc  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  architecture.md  index.html  knip.json  package-lock.json  package.json  playwright.config.js  tsconfig.json  vercel.json  vite.config.js
.claude/: settings.json
.husky/: commit-msg  pre-commit
admin/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
api/: README.md  [...route].ts  assets.ts  chat.ts  healthz.ts  index.ts  ohlcv.ts
app/: .env.example  README.md  index.html  package.json  vercel.json  vite.config.js
backtest/: README.md  index.js
config/: ingestion.config.json
copilot/: README.md  index.js
data/: README.md
diagnostics/: README.md  index.js
docs/: 2026-03-27-work-summary.md  2026-04-01-auth-and-verify-hardening.md  2026-04-01-supabase-auth-and-online-db-only.md  AI_RESEARCH_COPILOT.md  ASSUMPTIONS.md  AWS_EC2_DEPLOYMENT.md  BACKTEST_REPLAY_PAPER_EVIDENCE_ENGINE.md  CHANGE_SUMMARY_2026-03-26.md  CLOUD_NOVA_RUNTIME.md  (+87 more)
qlib-bridge/: .gitignore  README.md  pyproject.toml
qlib-bridge/bridge/: __init__.py  __main__.py  backtest_adapter.py  config.py  data_sync.py  factor_adapter.py  model_adapter.py  server.py
qlib-bridge/deployment/: nova-qlib-bridge.service  qlib-bridge.env.example
qlib-bridge/models/: README.md
qlib-bridge/scripts/: dump_bin.py  test_qlib.py
qlib-bridge/tests/: test_api.py  test_backtest_adapter.py  test_data_sync.py
(+986 files in other folders)
